--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
 }
 .container {
   max-width: 100%;
-  height: 95vh;
+  height: 100vh;
   width: 450px;
   margin: 0 auto;
   overflow: hidden auto;
@@ -217,8 +217,10 @@ main.close {
   justify-content: space-between;
   align-items: center;
   position: sticky;
-  bottom: 0;
+  bottom: .5rem;
+  /* width: 420px; */
   width: 100%;
+  margin: 0 auto;
   background-color: rgba(245, 222, 179, 0.8);
 }
 #search {
@@ -229,6 +231,7 @@ main.close {
   outline: none;
   font-size: 1.2rem;
   font-family: inherit;
+  width: 100%;
 }
 #search::placeholder {
   color: #333;
