--- a/style.css
+++ b/style.css
@@ -108,10 +108,10 @@ main.close {
 }
 .buttons button {
   cursor: pointer;
-  padding: .3rem 1rem;
+  padding: .6rem 1rem;
   font-size: 1.05rem;
   border:none;
-  border-radius: 10%;
+  border-radius: 8px;
   margin: 0 .5rem .7rem 0;
   transition: 500ms;
 }
@@ -217,10 +217,9 @@ main.close {
   justify-content: space-between;
   align-items: center;
   position: sticky;
-  bottom: .5rem;
-  /* width: 420px; */
+  top: 0;
   width: 100%;
-  margin: 0 auto;
+  margin: 0rem auto 1rem;
   background-color: rgba(245, 222, 179, 0.8);
 }
 #search {
